# cat-statues

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
