[package]
name = "cat-statues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
bevy_audio = "0.7"
bevy_core = "0.7"
bevy_derive = "0.7"
bevy_sprite = "0.7"
bevy_ui = "0.7"

[workspace]
resolver = "2"
members=["src/*"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
